--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title> Design </title>
+	<title> Designs </title>
 	<link rel="stylesheet" href="main.css">
 	<link rel="shortcut icon" href="Imgs/circle.png">
 </head>
