--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<div id="Container">
 		<div class="navbar">
-			<img src="Imgs/camera.png" class="logo">
+			<img src="Imgs/Camera.png" class="logo">
 			<div class="user">
 				<button type="button">Explore</button>
 				<img src="Imgs/circle.png" class="user">
